change route to image

--- a/sto_landing/.env
+++ b/sto_landing/.env
@@ -2,3 +2,4 @@ NODE_ENV=production
 PORT=7000
 NODE_PATH=./src
 REACT_APP_URL=https://western-service.herokuapp.com/
+REACT_APP_ENV=https://western-service.herokuapp.com/
