add postinstall script

--- a/sto_landing/package.json
+++ b/sto_landing/package.json
@@ -25,6 +25,7 @@
     "react-zoom-pan-pinch": "^1.6.1"
   },
   "scripts": {
+    "postinstall": "npm run build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
