another url change

--- a/sto_landing/.env
+++ b/sto_landing/.env
@@ -1,5 +1,5 @@
 NODE_ENV=production
 PORT=7000
 NODE_PATH=./src
-REACT_APP_URL=https://western-service.herokuapp.com
-REACT_APP_ENV=https://western-service.herokuapp.com
+PUBLIC_URL=https://western-service.herokuapp.com
+REACT_APP_ENV
