--- a/sto_landing/package.json
+++ b/sto_landing/package.json
@@ -16,6 +16,7 @@
     "express": "^4.17.1",
     "leaflet": "^1.6.0",
     "morgan": "^1.10.0",
+    "prop-types": "^15.7.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-leaflet": "^2.7.0",
